trustfall_core/test_data/tests/valid_queries/transform_with_transformed_tag.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    One {
        value @tag @transform(op: "+", value: ["%value"]) @tag(name: "doubled")

        successor {
            value @transform(op: "+", value: ["%doubled"]) @output
        }
    }
}"#,
    arguments: {},
)
