trustfall_core/test_data/tests/parse_errors/invalid_transform_argument_name.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        # "10" is not a valid variable identifier
        value @transform(op: "add", value: ["$10"]) @output
    }
}"#,
    arguments: {},
)
